--- a/FinalScraper/packages.config
+++ b/FinalScraper/packages.config
@@ -25,6 +25,8 @@
   <package id="Modernizr" version="2.8.3" targetFramework="net461" />
   <package id="MySql.Data" version="8.0.11" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net461" />
+  <package id="PagedList" version="1.17.0.0" targetFramework="net461" />
+  <package id="PagedList.Mvc" version="4.5.0.0" targetFramework="net461" />
   <package id="Selenium.Chrome.WebDriver" version="2.40" targetFramework="net461" />
   <package id="Selenium.WebDriver" version="3.12.1" targetFramework="net461" />
   <package id="Selenium.WebDriver.ChromeDriver" version="2.40.0" targetFramework="net461" />
